# Youtube-Sort

./: pyproject.toml
youtube_sort/: manage.py
youtube_sort/youtube_auth/: admin.py  apps.py  models.py  signals.py  views.py
youtube_sort/youtube_auth/migrations/: 0001_initial.py
youtube_sort/youtube_sort/: asgi.py  settings.py  urls.py  wsgi.py
youtube_sort/youtube_vault/: admin.py  apps.py  models.py  signals.py  tasks.py
youtube_sort/youtube_vault/migrations/: 0001_initial.py
youtube_sort/youtube_vault/templates/admin/youtube_vault/YoutubePlaylist/: change_list.html
